Fixed header image url.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     #header_img {
       width: 800px;
       height: 200px;
-      background: url("name.svg")
+      background: url("img/name.svg")
     }
     .cat {
       background: #888;
