Added another programming project entry.

--- a/index.html
+++ b/index.html
@@ -157,6 +157,18 @@
         <p>
           This is a simple demo I made using GBDK to get familiar with the library. It features a DVD Video logo as a metasprite that bounces around the screen and changes color on collision.
         </p>
+        <hr class="sep"/>
+        <h3>
+          <a href="https://github.com/8bitprodigy/6DOF_Demo">
+            GameBoy Roguelike
+          </a>
+        </h3>
+        <video width="720px" controls>
+          <source src="videos/gb_roguelike.mp4" type="video/mp4" />
+        </video>
+        <p>
+          This is a work-in-progress roguelike I've been working on for the GameBoy in C and GBDK. It's pretty early on, but the basic skeleton of dungeon generation is implemented.
+        </p>
       <hr class="cat"/>
       <h2>
         Graphic Design
