--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         </p>
         <hr class="sep"/>
         <h3>
-          <a href="https://github.com/8bitprodigy/6DOF_Demo">
+          <a href="">
             GameBoy Color DVD Screensaver demo
           </a>
         </h3>
@@ -159,7 +159,7 @@
         </p>
         <hr class="sep"/>
         <h3>
-          <a href="https://github.com/8bitprodigy/6DOF_Demo">
+          <a href="">
             GameBoy Roguelike
           </a>
         </h3>
