Added a couple more programming entries.

--- a/index.html
+++ b/index.html
@@ -169,6 +169,24 @@
         <p>
           This is a work-in-progress roguelike I've been working on for the GameBoy in C and GBDK. It's pretty early on, but the basic skeleton of dungeon generation is implemented.
         </p>
+        <hr class="sep"/>
+        <h3>
+          <a href="https://github.com/8bitprodigy/nrpnc">
+            <img src="img/nrpnc.svg" alt="Nim Reverse Polish Notation Calculator" />
+          </a>
+        </h3>
+        <p>
+          This is an RPN (Reverse Polish Notation) calculator in Nim. It operates on a stack-based language with if/else statements, variables, and function declaration.
+        </p>
+        <hr class="sep"/>
+        <h3>
+          <a href="https://github.com/8bitprodigy/nute">
+            N.U.T.E.
+          </a>
+        </h3>
+        <p>
+          The Nim Unstructured/Useless Text Editor. I made this as an exercise to learn Nim and make use of its built in types. It stores a document line by line in an AVL tree, and it makes editing the text document much like entering a program into an 80's microcomputer. To enter text, you type the number for its line, followed by a space, and then the text you wish to enter. If there's a line number collision, it replaces the old line, but if not, it's entered into the AVL tree, which then self-balances.
+        </p>
       <hr class="cat"/>
       <h2>
         Graphic Design
