--- a/index.html
+++ b/index.html
@@ -79,26 +79,48 @@
       <div id="header_img"></div>
       <hr/>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        My name is Christopher DeBoy, and I'm an aspiring programmer and graphic designer/artist. I'm most familiar with the Godot Game Engine and its GDScript scripting language, having worked with it for over 8 years and developed quite a few comprehensive systems in it.
         <br/>
-        Here are some of my links:
-        <ul>
-          <li>
-            <a href="https://github.com/8bitprodigy">
-              Github Profile
-            </a>
-          </li>
-          <li>
-            <a href="https://codeberg.org/chris_deboy">
-              Codeberg Profile
-            </a>
-          </li>
-          <li>
-            <a href="https://codeberg.org/San_Bernardino_Operation">
-              San Bernardino Operation on Codeberg
-            </a>
-          </li>
-        </ul>
+        <br/>
+        Here's a list of languages I'm familiar with:
+      </p>
+      <ul>
+        <li>GDScript</li>
+        <li>C/C++</li>
+        <li>Nim</li>
+        <li>Python</li>
+        <li>HTML5, CSS3, & JavaScript</li>
+      </ul>
+      <p>
+        Here are some links to my profiles:
+      </p>
+      <ul>
+        <li>
+          <a href="https://github.com/8bitprodigy">
+            Github Profile
+          </a>
+        </li>
+        <li>
+          <a href="https://codeberg.org/chris_deboy">
+            Codeberg Profile
+          </a>
+        </li>
+        <li>
+          <a href="https://codeberg.org/San_Bernardino_Operation">
+            San Bernardino Operation on Codeberg
+          </a>
+        </li>
+        <li>
+          <a href="https://8bitprodigy.itch.io/">
+            Itch.io
+          </a>
+        </li>
+        <li>
+          <a href="https://twitter.com/8bitProdigy">
+            Twitter/X
+          </a>
+        </li>
+      </ul>
       </p>
       <hr/>
       <h2>
