--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         My name is Christopher DeBoy, and I'm an aspiring programmer and graphic designer/artist. I'm most familiar with the Godot Game Engine and its GDScript scripting language, having worked with it for over 8 years and developed quite a few comprehensive systems in it.
         <br/>
         <br/>
-        Here's a list of languages I'm familiar with:
+        Here's a list of languages I'm most familiar with:
       </p>
       <ul>
         <li>GDScript</li>
