--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
       border: 0;
       background: #FFF;
     }
+    img {
+      max-width: 100%;
+      position: relative;
+      left: 50%;
+      transform: translate(-50%, 0);
+    }
     li {
       font-size: 14pt;
     }
@@ -61,7 +67,13 @@
     #header_img {
       width: 800px;
       height: 200px;
-      background: url("img/name.svg")
+      background: url("img/name.svg");
+    }
+    #phone {
+      width: 800px;
+      height: 40px;
+      background: url("img/contact.svg") center center no-repeat;
+
     }
     .cat {
       background: #888;
@@ -80,7 +92,7 @@
       <div id="header_img"></div>
       <hr/>
       <p>
-        My name is Christopher DeBoy, and I'm an aspiring programmer and graphic designer/artist. I'm most familiar with the Godot Game Engine and its GDScript scripting language, having worked with it for over 8 years and developed quite a few comprehensive systems in it.
+        My name is Christopher DeBoy, and I'm an aspiring game developer and graphic designer/artist. I'm most familiar with the Godot Game Engine and its GDScript scripting language, having worked with it for over 8 years and developed quite a few comprehensive systems in it.
         <br/>
         <br/>
         Here's a list of languages I'm most familiar with:
@@ -122,9 +134,28 @@
           </a>
         </li>
       </ul>
+      <p>
+        <b>Portfolio Sections:</b>
       </p>
+      <ul>
+        <li>
+          <a href="#programming">
+            Programming
+          </a>
+        </li>
+        <li>
+          <a href="#graphic_design">
+            Graphic Design
+          </a>
+        </li>
+        <li>
+          <a href="#3d_art_animation">
+            3D Art & Animation
+          </a>
+        </li>
+      </ul>
       <hr/>
-      <h2>
+      <h2 id="programming">
         Programming
       </h2>
       <hr class="sep"/>
@@ -212,14 +243,13 @@
           This is a work-in-progress roguelike I've been working on for the GameBoy in C and GBDK. It's pretty early on, but the basic skeleton of dungeon generation is implemented.
         </p>
         <hr class="sep"/>
-        <h3>
-          <a href="https://github.com/8bitprodigy/nrpnc">
-            <img src="img/nrpnc.svg" alt="Nim Reverse Polish Notation Calculator" />
-          </a>
-          <br />
-          <br />
-          <img src="img/nrpnc_screenshot.png" alt="Demonstration of nrpnc, showing function declaration, calling one function from another, and some simple addition." />
-        </h3>
+        <h3> </h3>
+        <a href="https://github.com/8bitprodigy/nrpnc">
+          <img src="img/nrpnc.svg" alt="Nim Reverse Polish Notation Calculator" />
+        </a>
+        <br />
+        <br />
+        <img src="img/nrpnc_screenshot.png" alt="Demonstration of nrpnc, showing function declaration, calling one function from another, and some simple addition." />
         <p>
           This is an RPN (Reverse Polish Notation) calculator in Nim. It operates with a stack-based language with if/else statements, variables, and function declaration, which should, in theory, make it turing-complete.
         </p>
@@ -228,65 +258,91 @@
           <a href="https://github.com/8bitprodigy/nute">
             N.U.T.E.
           </a>
-          <br />
-          <br />
-          <img src="img/nute_screenshot.png" alt="Demonstration of nute, a simple line text editor." />
         </h3>
+          <br />
+        <img src="img/nute_screenshot.png" alt="Demonstration of nute, a simple line text editor." />
         <p>
           The Nim Unstructured/Useless Text Editor. This is a line text editor I made as an exercise to learn Nim and make use of its built in types. It stores a document line by line in an AVL tree, and it makes editing the text document much like entering a program into an 80's microcomputer. To enter text, you type the number for its line, followed by a space, and then the text you wish to enter. If there's a line number collision, it replaces the old line, but if not, it's entered into the AVL tree, which then self-balances.
         </p>
         <hr class="sep"/>
-        <h3>
-          <a href="https://codeberg.org/San_Bernardino_Operation/AtlasWM">
-            <img src="img/awm_logo.svg" alt="Atlas Window Manager" />
-          </a>
-          <br />
-          <br />
-          <img src="img/awm_screenshot.png" alt="Demonstration of nrpnc, showing function declaration, calling one function from another, and some simple addition." />
-        </h3>
+        <h3></h3>
+        <a href="https://codeberg.org/San_Bernardino_Operation/AtlasWM">
+          <img src="img/awm_logo.svg" alt="Atlas Window Manager" />
+        </a>
+        <br />
+        <br />
+        <img src="img/awm_screenshot.png" alt="Demonstration of nrpnc, showing function declaration, calling one function from another, and some simple addition." />
         <p>
           This is the Atlas Window Manager. AtlasWM aims to be a lightweight, but featureful, and user-friendly window manager for X11, based on Joe's Window Manager (JWM), that only uses permissively-licensed code and libraries, as it will be the default window manager for AcephalOS and eventually PrometheusOS.
           <br/>
           <br/>
-          Currently, I've replaced Cairo/libRSVG with <a href="https://github.com/sammycage/plutosvg" alt="Link to the PlutoSVG Github repo.">PlugoSVG</a>, and have enhanced the customizability of the motif theme to enable greater readability, and am currently working on replacing Pango/XFT with <a href="https://github.com/tomolt/libschrift" alt="Link to the libSchrift Github repo.">libSchrift</a>. I intend to extend its features, with some of the main ones being tababble windows, like in Haiku or FluxBox, and a global menu panel item.
+          Currently, I've replaced Cairo/libRSVG with <a href="https://github.com/sammycage/plutosvg" alt="Link to the PlutoSVG Github repo.">PlugoSVG</a>, and have enhanced the customizability of the motif theme to enable greater readability, and am currently working on replacing Pango/XFT with <a href="https://github.com/tomolt/libschrift" alt="Link to the libSchrift Github repo.">libSchrift</a>. I intend to extend its features, with some of the main ones being tababble w      left: 50%;
+      transform: translate(-50%, 0%);indows, like in Haiku or FluxBox, and a global menu panel item.
           <br/>
           <br/>
           AtlasWM is currently in alpha stages, and most planned features are not yet implemented. Many things are likely subject to change, so it is not recommended for daily use.
         </p>
       <hr class="cat"/>
-      <h2>
+      <h2 id="graphic_design">
         Graphic Design
       </h2>
       <hr class="sep"/>
         <h3>
-          <a href="https://github.com/8bitprodigy/liver">
-            <img src="img/liver.svg" alt="The Liver typeface" />
-          </a>
         </h3>
+        <a href="https://github.com/8bitprodigy/liver">
+          <img src="img/liver.svg" alt="The Liver typeface" />
+        </a>
         <p>
           This is the typeface used throughout this document. Liver is a public-domain sans-serif font in the style of Goma/Shin-Go/Rodin/Saira, modeled with screens in mind.
           <br />
           <br />
           Comes in regular and mono variants. Bold variant in the works.
         </p>
+      <hr class="sep"/>
+        <h3>
+          Logos
+        </h3>
+          <img src="img/AcephalOS_logo.png" alt="AcephalOS logo" />
+          <p>
+            <h4>AcephalOS logo</h4>
+            <br />
+            Logo I made for a FreeBSD-based OS I am working on.
+          </p>
+          <img src="img/san_bernardino_operation.png" alt="San Bernardino Operation logo" />
+          <p>
+            <h4>San Bernardino Operation logo</h4>
+            <br />
+            Logo I made for the organization to work on AcephalOS.
+          </p>
+          <img src="img/iortcw.png" alt="ioRTCW logo" />
+          <p>ioRTCW</p>
+          <img src="img/Newioq3.png" alt="old ioQuake3 logo" />
+          <p>Old ioQuake3 logo</p>
+          <img src="img/logoFinal2.png" alt="The Gore Edition logo" />
+          <p>The Gore Effect Facebook logo</p>
+        <p>
+        In addition to the above logos, all other logos on this page were designed by myself.
+        </p>
       <hr class="cat"/>
-      <h2>
+      <h2 id="3d_art_animation">
         3D Art & Animation
       </h2>
-      <hr class="sep"/>
-
-      <hr class="cat"/>
-      <h2>
-        2D Art
-      </h2>
-      <hr class="sep"/>
-
+      <p>
+        Some 3D models I've worked on, some of which are animated. This is an incomplete list.
+      </p>
+      <img src="3d/animations.gif" alt="Samus Aran arm cannon I made for a Quake Mod I was working on." />
+      <img src="3d/ROBOT_ANIM_C0.gif" alt="A robot model I created, inspired by some outdoor security cameras I saw around town." />
+      <img src="3d/MechWalk1.gif" alt="A mech model I made for a game a friend of mine and I had started." />
+      <img src="3d/hmv_pic3.png" alt="A HMV model I made for a game a friend of mine and I had started." />
+      <img src="3d/muziSnapTex.png" alt="A low-poly, stylized Micro-Uzi model I had created." />
+      <img src="3d/render2cb.png" alt="A low-poly, stylized Kriss Vektor model I had created." />
+      <img src="3d/sgunSnapshotWTEX.png" alt="A low-poly, stylized Ithaca 37 stakeout-style shotgun model I had created." />
+      <img src="3d/vaporscapeColorSolids_8.png" alt="A retro/synthwave-inspired desktop wallpaper I made in Blender." />
       <hr/>
-      <a href="">
-        <h2>
-          Contact...
-        </h2>
-      </a>
+      <h2>
+        Contact
+      </h2>
+      <div id="phone"></div>
     </div>
   </body>
 </html>
