Added link to Contact section.

--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@
             3D Art & Animation
           </a>
         </li>
+        <li>
+          <a href="#contact">
+            Contact info
+          </a>
+        </li>
       </ul>
       <hr/>
       <h2 id="programming">
@@ -339,7 +344,7 @@
       <img src="3d/sgunSnapshotWTEX.png" alt="A low-poly, stylized Ithaca 37 stakeout-style shotgun model I had created." />
       <img src="3d/vaporscapeColorSolids_8.png" alt="A retro/synthwave-inspired desktop wallpaper I made in Blender." />
       <hr/>
-      <h2>
+      <h2 id="contact">
         Contact
       </h2>
       <div id="phone"></div>
