Updated contact info.

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
       height: 200px;
       background: url("img/name.svg");
     }
-    #phone {
+    #contact_info {
       width: 800px;
-      height: 40px;
-      background: url("img/contact.svg") center center no-repeat;
+      height: 80px;
+      background: url("img/contact.svg") center top no-repeat;
 
     }
     .cat {
@@ -92,7 +92,7 @@
       <div id="header_img"></div>
       <hr/>
       <p>
-        My name is Christopher DeBoy, and I'm an aspiring game developer and graphic designer/artist. I'm most familiar with the Godot Game Engine and its GDScript scripting language, having worked with it for over 8 years and developed quite a few comprehensive systems in it.
+        My name is Christopher DeBoy, and I'm an aspiring game developer and graphic designer/artist. I'm most familiar with the Godot Game Engine and its GDScript scripting language, having worked with it for over 8 years and developed quite a few comprehensive systems in it. <b>If you're interested in hiring me, <a href="#contact">feel free to reach out</a></b>
         <br/>
         <br/>
         Here's a list of languages I'm most familiar with:
@@ -347,7 +347,7 @@
       <h2 id="contact">
         Contact
       </h2>
-      <div id="phone"></div>
+      <div id="contact_info"></div>
     </div>
   </body>
 </html>
