Moved contact info up. Added extra videos to page.

--- a/index.html
+++ b/index.html
@@ -139,6 +139,11 @@
       </p>
       <ul>
         <li>
+          <a href="#contact">
+            Contact info
+          </a>
+        </li>
+        <li>
           <a href="#programming">
             Programming
           </a>
@@ -153,12 +158,12 @@
             3D Art & Animation
           </a>
         </li>
-        <li>
-          <a href="#contact">
-            Contact info
-          </a>
-        </li>
       </ul>
+      <hr/>
+      <h2 id="contact">
+        Contact
+      </h2>
+      <div id="contact_info"></div>
       <hr/>
       <h2 id="programming">
         Programming
@@ -171,6 +176,9 @@
         </h3>
         <video width="720px" controls>
           <source src="videos/fps_controller_1.mp4" type="video/mp4" />
+        </video>
+        <video width="720px" controls>
+          <source src="videos/fps_controller_2.mp4" type="video/mp4" />
         </video>
         <p>
           This is a first person shooter controller I made in the Godot engine. I got pretty far along and it includes the following features:
@@ -210,6 +218,9 @@
             6DOF Controller Demo
           </a>
         </h3>
+        <video width="720px" controls>
+          <source src="videos/6dof_demo_1.mp4" type="video/mp4" />
+        </video>
         <video width="720px" controls>
           <source src="videos/6dof_demo_2.mp4" type="video/mp4" />
         </video>
@@ -343,11 +354,6 @@
       <img src="3d/render2cb.png" alt="A low-poly, stylized Kriss Vektor model I had created." />
       <img src="3d/sgunSnapshotWTEX.png" alt="A low-poly, stylized Ithaca 37 stakeout-style shotgun model I had created." />
       <img src="3d/vaporscapeColorSolids_8.png" alt="A retro/synthwave-inspired desktop wallpaper I made in Blender." />
-      <hr/>
-      <h2 id="contact">
-        Contact
-      </h2>
-      <div id="contact_info"></div>
     </div>
   </body>
 </html>
