Added more images, as well as selectors to choose between them.

--- a/index.html
+++ b/index.html
@@ -366,14 +366,172 @@
       <p>
         Some 3D models I've worked on, some of which are animated. This is an incomplete list.
       </p>
-      <img src="3d/animations.gif" alt="Samus Aran arm cannon I made for a Quake Mod I was working on." />
-      <img src="3d/ROBOT_ANIM_C0.gif" alt="A robot model I created, inspired by some outdoor security cameras I saw around town." />
-      <img src="3d/MechWalk1.gif" alt="A mech model I made for a game a friend of mine and I had started." />
-      <img src="3d/hmv_pic3.png" alt="A HMV model I made for a game a friend of mine and I had started." />
-      <img src="3d/muziSnapTex.png" alt="A low-poly, stylized Micro-Uzi model I had created." />
-      <img src="3d/render2cb.png" alt="A low-poly, stylized Kriss Vektor model I had created." />
-      <img src="3d/sgunSnapshotWTEX.png" alt="A low-poly, stylized Ithaca 37 stakeout-style shotgun model I had created." />
-      <img src="3d/vaporscapeColorSolids_8.png" alt="A retro/synthwave-inspired desktop wallpaper I made in Blender." />
+      <h3>
+        Arm Cannon
+      </h3>
+      <img id="SAMUS" src="3d/arm_cannon/animations.gif" alt="Samus Aran arm cannon I made for a Quake Mod I was working on." />
+      <center>
+        <a id="samus_1" href="#SAMUS" onclick="changeImgSrc('SAMUS', '3d/arm_cannon/animations.gif')">
+            Animations
+        </a>
+        &emsp;|&emsp;
+        <a id="samus_2" href="#SAMUS" onclick="changeImgSrc('SAMUS', '3d/arm_cannon/3Q.png')">
+            3-Quarter clay render
+        </a>
+        &emsp;|&emsp;
+        <a id="samus_2" href="#SAMUS" onclick="changeImgSrc('SAMUS', '3d/arm_cannon/3QOpen.png')">
+            3-Quarter clay render, open
+        </a>
+        &emsp;|&emsp;
+        <a id="samus_2" href="#SAMUS" onclick="changeImgSrc('SAMUS', '3d/arm_cannon/fpView.png')">
+            First person clay render
+        </a>
+        &emsp;|&emsp;
+        <a id="samus_2" href="#SAMUS" onclick="changeImgSrc('SAMUS', '3d/arm_cannon/fpViewOpen.png')">
+            First person clay render, open
+        </a>
+        &emsp;|&emsp;
+        <a id="samus_2" href="#SAMUS" onclick="changeImgSrc('SAMUS', '3d/arm_cannon/front.png')">
+            Front clay render
+        </a>
+        &emsp;|&emsp;
+        <a id="samus_2" href="#SAMUS" onclick="changeImgSrc('SAMUS', '3d/arm_cannon/side.png')">
+            Side clay render
+        </a>
+        &emsp;|&emsp;
+        <a id="samus_2" href="#SAMUS" onclick="changeImgSrc('SAMUS', '3d/arm_cannon/top.png')">
+            Top clay render
+        </a>
+        &emsp;|&emsp;
+        <a id="samus_2" href="#SAMUS" onclick="changeImgSrc('SAMUS', '3d/arm_cannon/armCannonTex.png')">
+            Texture
+        </a>
+        &emsp;|&emsp;
+        <a id="samus_2" href="#SAMUS" onclick="changeImgSrc('SAMUS', '3d/arm_cannon/3QTex3.png')">
+            3-Quarter textured
+        </a>
+        &emsp;|&emsp;
+        <a id="samus_2" href="#SAMUS" onclick="changeImgSrc('SAMUS', '3d/arm_cannon/3QOpenTex3.png')">
+            3-Quarter textured, open
+        </a>
+        &emsp;|&emsp;
+        <a id="samus_2" href="#SAMUS" onclick="changeImgSrc('SAMUS', '3d/arm_cannon/fpViewTex3.png')">
+            First person textured
+        </a>
+        &emsp;|&emsp;
+        <a id="samus_2" href="#SAMUS" onclick="changeImgSrc('SAMUS', '3d/arm_cannon/sideTex3.png')">
+            Side textured
+        </a>
+      </center>
+      <p>Samus Aran arm cannon I made for a Quake Mod I was working on.</p>
+      <hr class="sep"/>
+      <h3>
+        Robot
+      </h3>
+      <img id="ROBOT" src="3d/ROBOT_ANIM_C0.gif" alt="A robot model I created, inspired by some outdoor security cameras I saw around town." />
+      <center>
+        <a id="robot_1" href="#ROBOT" onclick="changeImgSrc('ROBOT', '3d/ROBOT_ANIM_C0.gif')">
+            Walking, ready
+        </a>
+        &emsp;|&emsp;
+        <a id="robot_2" href="#ROBOT" onclick="changeImgSrc('ROBOT', '3d/ROBOT_ANIM_D.gif')">
+            Crouch-walking, ready
+        </a>
+        &emsp;|&emsp;
+        <a id="robot_3" href="#ROBOT" onclick="changeImgSrc('ROBOT', '3d/ROBOT_ANIM4.gif')">
+            Walking, no gun
+        </a>
+      </center>
+      <p>A robot model I created, inspired by some outdoor security cameras I saw around my hometown.</p>
+      <hr class="sep"/>
+      <h3>
+        Star Raiders
+      </h3>
+      <img id="STAR" src="3d/MechWalk1.gif" alt="A mech model I made for a game a friend of mine and I had started." />
+      <center>
+        <a id="star_1" href="#STAR" onclick="changeImgSrc('STAR', '3d/MechWalk1.gif')">
+            Mech, Walking
+        </a>
+        &emsp;|&emsp;
+        <a id="star_2" href="#STAR" onclick="changeImgSrc('STAR', '3d/MechWalk.gif')">
+            Mech, Walking, alternate view 1
+        </a>
+        &emsp;|&emsp;
+        <a id="star_3" href="#STAR" onclick="changeImgSrc('STAR', '3d/MechWalk0.gif')">
+            Mech, Walking, alternate view 2
+        </a>
+        &emsp;|&emsp;
+        <a id="star_4" href="#STAR" onclick="changeImgSrc('STAR', '3d/hmv_pic3.png')">
+            HMV
+        </a>
+        &emsp;|&emsp;
+        <a id="star_5" href="#STAR" onclick="changeImgSrc('STAR', '3d/tank_pic9.png')">
+            Tank
+        </a>
+        &emsp;|&emsp;
+        <a id="star_3" href="#STAR" onclick="changeImgSrc('STAR', '3d/turret_1.png')">
+            Sentry turret
+        </a>
+      </center>
+      <p>Various models I made for a game I was working on with a friend called "Star Raiders"(Working title).</p>
+      <hr class="sep"/>
+      <h3>
+        Various Guns
+      </h3>
+      <img id="GUNS" src="3d/muziSnapTex.png" alt="A low-poly, stylized Micro-Uzi model I had created." />
+      <center>
+        <a id="guns_1" href="#GUNS" onclick="changeImgSrc('GUNS', '3d/muziSnapTex.png')">
+            Micro-Uzi
+        </a>
+        &emsp;|&emsp;
+        <a id="guns_2" href="#GUNS" onclick="changeImgSrc('GUNS', '3d/render2cb.png')">
+            Kriss Vektor
+        </a>
+        &emsp;|&emsp;
+        <a id="guns_3" href="#GUNS" onclick="changeImgSrc('GUNS', '3d/sgunSnapshotWTEX.png')">
+            Ithaca 37 Stakeout
+        </a>
+        &emsp;|&emsp;
+        <a id="guns_4" href="#GUNS" onclick="changeImgSrc('GUNS', '3d/texturedShadedRender3.png')">
+            AR-15
+        </a>
+        &emsp;|&emsp;
+        <a id="guns_5" href="#GUNS" onclick="changeImgSrc('GUNS', '3d/render6-.png')">
+            FAMAS, untextured
+        </a>
+        &emsp;|&emsp;
+        <a id="guns_3" href="#GUNS" onclick="changeImgSrc('GUNS', '3d/render.png')">
+            Recoilless Rifle, clay render
+        </a>
+        &emsp;|&emsp;
+        <a id="guns_3" href="#GUNS" onclick="changeImgSrc('GUNS', '3d/render8.png')">
+            Saiga-12, untextured
+        </a>
+      </center>
+      <p>Various low-poly, stylized weapon models I have created over the years.</p>
+      <hr class="sep"/>
+      <h3>
+        Wallpapers
+      </h3>
+      <img id="WALLPAPER" src="3d/goreEffectHD_glow.png" alt="Various retro/synthwave desktop wallpapers I've created in Blender3D." />
+      <center>
+        <a id="wallpaper_1" href="#WALLPAPER" onclick="changeImgSrc('WALLPAPER', '3d/goreEffectHD_glow.png')">
+            Synthwave Terrain
+        </a>
+        &emsp;|&emsp;
+        <a id="wallpaper_2" href="#WALLPAPER" onclick="changeImgSrc('WALLPAPER', '3d/goreEffectHD_glow1.jpg')">
+            Synthwave Terrain, alternate glow
+        </a>
+        &emsp;|&emsp;
+        <a id="wallpaper_3" href="#WALLPAPER" onclick="changeImgSrc('WALLPAPER', '3d/vaporscapeColorSolids_8.png')">
+            Synthwave Color Solids
+        </a>
+        &emsp;|&emsp;
+        <a id="wallpaper_4" href="#WALLPAPER" onclick="changeImgSrc('WALLPAPER', '3d/burger4.png')">
+            RetroWave fast food
+        </a>
+      </center>
+      <p>Various retro/synthwave desktop wallpapers I've created in Blender3D.</p>
     </div>
   </body>
 </html>
