Added a separator to 3D Art & Animation category to improve readability.

--- a/index.html
+++ b/index.html
@@ -366,6 +366,7 @@
       <p>
         Some 3D models I've worked on, some of which are animated. This is an incomplete list.
       </p>
+      <hr class="sep"/>
       <h3>
         Arm Cannon
       </h3>
