--- a/index.html
+++ b/index.html
@@ -3,86 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Christopher DeBoy</title>
-    <style>
-    *{
-      font-family: 'Liver';
-      background: #000;
-      color: #fff
-    }
-    h1, h2, h3 {
-      text-align: center;
-    }
-    hr {
-      height: 1px;
-      border: 0;
-      background: #FFF;
-    }
-    img {
-      max-width: 100%;
-      position: relative;
-      left: 50%;
-      transform: translate(-50%, 0);
-    }
-    li {
-      font-size: 14pt;
-    }
-    p {
-      margin: 24px;
-      font-size: 16pt;
-    }
-    video {
-      display: block;
-      margin: auto;
-    }
-    @font-face {
-      font-family: 'Liver';
-      src: url('font/Liver.woff2');
-    }
-    @font-face {
-      font-family: 'Liver-mono';
-      src: url('font/Liver_mono.woff2');
-    }
-    #content {
-      display: block;
-      width: 800px;
-      position: relative;
-      border: 4px solid #fff;
-      padding: 8px;
-      left: 50%;
-      transform: translateX(-50%);
-      margin-top: 64px;
-      margin-bottom: 64px;
 
-    }
-    #header {
-      font-size: 80pt;
-      text-shadow:
-        8px   8px 0px #888,
-        16px 16px 0px #666,
-        24px 24px 0px #444,
-        32px 32px 0px #333,
-        40px 40px 0px #222,
-        48px 48px 0px #111;
-    }
-    #header_img {
-      width: 800px;
-      height: 200px;
-      background: url("img/name.svg");
-    }
-    #contact_info {
-      width: 800px;
-      height: 80px;
-      background: url("img/contact.svg") center top no-repeat;
+    <meta property="og:title" content="Christopher DeBoy">
+		<meta property="og:description" content="Christopher DeBoy's programming/gamedev porfolio.'">
+		<meta property="og:image" content="https://8bitprodigy.github.io/img/name.svg">
+		<meta property="og:url" content="https://8bitprodigy.github.io/">
 
-    }
-    .cat {
-      background: #888;
-    }
-    .sep {
-      background: #333;
-    }
-
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <script src="scripts.js" type="text/javascript"></script>
   </head>
   <body>
