Added Glock entry to 3D Models & Animations.

--- a/index.html
+++ b/index.html
@@ -295,6 +295,61 @@
       </p>
       <hr class="sep"/>
       <h3>
+        Glock 17
+      </h3>
+      <img id="GLOCK" src="3d/glock/3qfl.png" alt="Rigged Glock 17 3D model I was working on in Blender, texture made in Inkscape and GIMP." />
+      <center>
+        <a id="glock_1" href="#GLOCK" onclick="changeImgSrc('GLOCK', '3d/glock/3qfl.png')">
+            3-Quarter front left
+        </a>
+        &emsp;|&emsp;
+        <a id="glock_1" href="#GLOCK" onclick="changeImgSrc('GLOCK', '3d/glock/3qfr.png')">
+            3-Quarter front right
+        </a>
+        &emsp;|&emsp;
+        <a id="glock_1" href="#GLOCK" onclick="changeImgSrc('GLOCK', '3d/glock/3qrl.png')">
+            3-Quarter rear left
+        </a>
+        &emsp;|&emsp;
+        <a id="glock_1" href="#GLOCK" onclick="changeImgSrc('GLOCK', '3d/glock/3qrr.png')">
+            3-Quarter rear right
+        </a>
+        &emsp;|&emsp;
+        <a id="glock_1" href="#GLOCK" onclick="changeImgSrc('GLOCK', '3d/glock/front.png')">
+            Front
+        </a>
+        &emsp;|&emsp;
+        <a id="glock_1" href="#GLOCK" onclick="changeImgSrc('GLOCK', '3d/glock/rear.png')">
+            Rear
+        </a>
+        &emsp;|&emsp;
+        <a id="glock_1" href="#GLOCK" onclick="changeImgSrc('GLOCK', '3d/glock/side_l.png')">
+            Left
+        </a>
+        &emsp;|&emsp;
+        <a id="glock_1" href="#GLOCK" onclick="changeImgSrc('GLOCK', '3d/glock/side_r.png')">
+            Right
+        </a>
+        &emsp;|&emsp;
+        <a id="glock_1" href="#GLOCK" onclick="changeImgSrc('GLOCK', '3d/glock/locked_l.png')">
+            Locked open, left
+        </a>
+        &emsp;|&emsp;
+        <a id="glock_1" href="#GLOCK" onclick="changeImgSrc('GLOCK', '3d/glock/locked_r.png')">
+            Locked open, right
+        </a>
+        &emsp;|&emsp;
+        <a id="glock_1" href="#GLOCK" onclick="changeImgSrc('GLOCK', '3d/glock/under_slide.png')">
+            Under slide
+        </a>
+        &emsp;|&emsp;
+        <a id="glock_1" href="#GLOCK" onclick="changeImgSrc('GLOCK', '3d/glock/Glock17.png')">
+            Texture
+        </a>
+      </center>
+      <p>Rigged Glock 17 3D model I was working on in Blender, texture made in Inkscape and GIMP.</p>
+      <hr class="sep"/>
+      <h3>
         Arm Cannon
       </h3>
       <img id="SAMUS" src="3d/arm_cannon/animations.gif" alt="Samus Aran arm cannon I made for a Quake Mod I was working on." />
