--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Christopher DeBoy</title>
 
     <meta property="og:title" content="Christopher DeBoy">
-		<meta property="og:description" content="Christopher DeBoy's programming/gamedev porfolio.'">
-		<meta property="og:image" content="https://8bitprodigy.github.io/img/name.svg">
+		<meta property="og:description" content="Christopher DeBoy's programming/gamedev porfolio.">
+		<meta property="og:image" content="https://8bitprodigy.github.io/img/meta.png">
 		<meta property="og:url" content="https://8bitprodigy.github.io/">
 
     <link rel="stylesheet" type="text/css" href="style.css" />
