Added two new animations I had made in the past.

--- a/index.html
+++ b/index.html
@@ -309,6 +309,26 @@
       <p>Rigged Glock 17 3D model I was working on in Blender, texture made in Inkscape and GIMP.</p>
       <hr class="sep"/>
       <h3>
+        The New Retro Show intro
+      </h3>
+      <video id="tnrs_intro"  width="720px" controls>
+        <source src="videos/newretro.mp4" type="video/mp4" />
+      </video>
+      <p>
+        Intro sequence I made for the YouTube channel <a href="https://www.youtube.com/@thenewretroshow">The New Retro Show</a>.
+      </p>
+      <hr class="sep"/>
+      <h3>
+        Metal Jesus Rocks intro
+      </h3>
+      <video id="mjr_intro"  width="720px" controls>
+        <source src="videos/mjr_intro.mp4" type="video/mp4" />
+      </video>
+      <p>
+        An intro sequence I made for the YouTube channel <a href="https://www.youtube.com/@MetalJesusRocks/">MetalJesusRocks</a>. Unfortunately, I do not recall the video it was used in.
+      </p>
+      <hr class="sep"/>
+      <h3>
         Arm Cannon
       </h3>
       <img id="SAMUS" src="3d/arm_cannon/animations.gif" alt="Samus Aran arm cannon I made for a Quake Mod I was working on." />
