Added a .ico favicon. Added some more info to some of the animations.

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
             Side textured
         </a>
       </center>
-      <p>Samus Aran arm cannon I made for a Quake Mod I was working on.</p>
+      <p>Samus Aran arm cannon I made for a Quake Mod I was working on. Made using forward kinematics.</p>
       <hr class="sep"/>
       <h3>
         Robot
@@ -404,7 +404,7 @@
             Walking, no gun
         </a>
       </center>
-      <p>A robot model I created, inspired by some outdoor security cameras I saw around my hometown.</p>
+      <p>A robot model I created, inspired by some outdoor security cameras I saw around my hometown. Makes uses of Forward and Inverse kinematics.</p>
       <hr class="sep"/>
       <h3>
         Star Raiders
@@ -435,7 +435,7 @@
             Sentry turret
         </a>
       </center>
-      <p>Various models I made for a game I was working on with a friend called "Star Raiders"(Working title).</p>
+      <p>Various models I made for a game I was working on with a friend called "Star Raiders"(Working title). Animated using forward kinematics.</p>
       <hr class="sep"/>
       <h3>
         Various Guns
