Added link for favicon.ico so it hopefully shows up in new tabs now.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Christopher DeBoy</title>
-
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <meta property="og:title" content="Christopher DeBoy">
 		<meta property="og:description" content="Christopher DeBoy's programming/gamedev porfolio.">
 		<meta property="og:image" content="https://8bitprodigy.github.io/img/meta.png">
