added a couple more examples of my work.

--- a/index.html
+++ b/index.html
@@ -183,6 +183,75 @@
         </p>
         <hr class="sep"/>
         <h3>
+          Magical Girl FPS
+        </h3>
+        <img id="MGIRL" src="3d/magical_girl.jpg" />
+        <center>
+            <a id="mgirl_0" href="#MGIRL" onclick="changeImgSrc('MGIRL', '3d/magical_girl.jpg')">
+                Mall hub level
+            </a>
+            &emsp;|&emsp;
+            <a id="mgirl_1" href="#MGIRL" onclick="changeImgSrc('MGIRL', '3d/magical_girl-0.jpg')">
+                Firing
+            </a>
+            &emsp;|&emsp;
+            <a id="mgirl_2" href="#MGIRL" onclick="changeImgSrc('MGIRL', '3d/magical_girl-1.jpg')">
+                After firing for a bit
+            </a>
+            &emsp;|&emsp;
+            <a id="mgirl_3" href="#MGIRL" onclick="changeImgSrc('MGIRL', '3d/magical_girl-3.jpg')">
+                Some world models I had made
+            </a>
+            &emsp;|&emsp;
+            <a id="mgirl_4" href="#MGIRL" onclick="changeImgSrc('MGIRL', '3d/magical_girl_staff.jpg')">
+                The heart wand
+            </a>
+        </center>
+        <p>
+          This was a magical girl-themed FPS I was working on in Godot. Unfortunately, I'm unable to launch the project, so these images are all that I have of it.
+          In this game, you could play as 3 different magical girls, each one having their own wand and movement mechanic. Movement mechanics were activated with the jump key while airborne.
+        </p>
+          <br/><br/>
+          <b>Wands:</b>
+          <ul>
+              <li><b>Ice Wand  </b> - fires ice crystals like a shotgun</li>
+              <li><b>Earth Wand</b> - fires a stream of flower petals like a machine gun. As the wand fires, the stream of petals spirals outward.</li>
+              <li><b>Heart Wand</b> - Was to fire an explosive, but wasn't implemented yet.</li>
+          </ul>
+          <br/>
+          <b>Movement types:</b>
+          <ul>
+              <li>
+                  <b>Double Jump</b> - an extra jump in midair
+              </li>
+              <li>
+                  <b>Glide</b> - descent is slowed with increased horizontal movement
+              </li>
+              <li>
+                  <b>Dive</b> - accelerate for a short burst in the direction you're moving
+              </li>
+          </ul>
+        </p>
+        <hr class="sep"/>
+        <h3>
+          3D Gauntlet-like
+        </h3>
+        <img id="GAUNT" src="3d/3d_gauntlet.jpg" />
+        <center>
+            <a id="mgirl_0" href="#GAUNT" onclick="changeImgSrc('GAUNT', '3d/3d_gauntlet.jpg')">
+                Items
+            </a>
+            &emsp;|&emsp;
+            <a id="mgirl_1" href="#GAUNT" onclick="changeImgSrc('GAUNT', '3d/3d_gauntlet_potion.jpg')">
+                Potion
+            </a>
+            </a>
+        </center>
+        <p>
+          This was a 3D Gauntlet-style game I was working on that the project seems to have been lost to time. I had a character select screen and a single level that you could play through complete with pickup items, unlockable doors, destroyable walls, items to pick up, enemies, and an exit. Unfortunately, these are the only two pictures of it I can find at the moment.
+        </p>
+      <hr class="sep"/>
+        <h3>
           <a href="">
             GameBoy Color DVD Screensaver demo
           </a>
@@ -431,8 +500,12 @@
             Tank
         </a>
         &emsp;|&emsp;
-        <a id="star_3" href="#STAR" onclick="changeImgSrc('STAR', '3d/turret_1.png')">
+        <a id="star_6" href="#STAR" onclick="changeImgSrc('STAR', '3d/turret_1.png')">
             Sentry turret
+        </a>
+        &emsp;|&emsp;
+        <a id="star_7" href="#STAR" onclick="changeImgSrc('STAR', '3d/jet.jpg')">
+            Jet with Texture
         </a>
       </center>
       <p>Various models I made for a game I was working on with a friend called "Star Raiders"(Working title). Animated using forward kinematics.</p>
