Added two more images to the 3D Gauntlet-like entry.

--- a/index.html
+++ b/index.html
@@ -238,11 +238,18 @@
         </h3>
         <img id="GAUNT" src="3d/3d_gauntlet.jpg" />
         <center>
-            <a id="mgirl_0" href="#GAUNT" onclick="changeImgSrc('GAUNT', '3d/3d_gauntlet.jpg')">
+            <a id="gaunt_0" href="#GAUNT" onclick="changeImgSrc('GAUNT', '3d/3d_gauntlet.jpg_wiz_skelly')">
+                Fighting Skeletons as the Wizard
+            </a>
+            &emsp;|&emsp;
+            <a id="gaunt_1" href="#GAUNT" onclick="changeImgSrc('GAUNT', '3d/3d_gauntlet_barbarian_ghosts.jpg')">
+                Fighting ghosts as the Barbarian
+            </a>
+            <a id="gaunt_2" href="#GAUNT" onclick="changeImgSrc('GAUNT', '3d/3d_gauntlet.jpg')">
                 Items
             </a>
             &emsp;|&emsp;
-            <a id="mgirl_1" href="#GAUNT" onclick="changeImgSrc('GAUNT', '3d/3d_gauntlet_potion.jpg')">
+            <a id="gaunt_3" href="#GAUNT" onclick="changeImgSrc('GAUNT', '3d/3d_gauntlet_potion.jpg')">
                 Potion
             </a>
             </a>
