fixed some incorrect links.

--- a/index.html
+++ b/index.html
@@ -236,15 +236,16 @@
         <h3>
           3D Gauntlet-like
         </h3>
-        <img id="GAUNT" src="3d/3d_gauntlet.jpg" />
+        <img id="GAUNT" src="3d/3d_gauntlet_wiz_skelly.jpg" />
         <center>
-            <a id="gaunt_0" href="#GAUNT" onclick="changeImgSrc('GAUNT', '3d/3d_gauntlet.jpg_wiz_skelly')">
+            <a id="gaunt_0" href="#GAUNT" onclick="changeImgSrc('GAUNT', '3d/3d_gauntlet_wiz_skelly.jpg')">
                 Fighting Skeletons as the Wizard
             </a>
             &emsp;|&emsp;
             <a id="gaunt_1" href="#GAUNT" onclick="changeImgSrc('GAUNT', '3d/3d_gauntlet_barbarian_ghosts.jpg')">
                 Fighting ghosts as the Barbarian
             </a>
+            &emsp;|&emsp;
             <a id="gaunt_2" href="#GAUNT" onclick="changeImgSrc('GAUNT', '3d/3d_gauntlet.jpg')">
                 Items
             </a>
